--- a/src/components/StringLink.scss
+++ b/src/components/StringLink.scss
@@ -8,6 +8,7 @@ $linkHeight: 100px;
 
   border: 1px solid #fff;
   text-align: center;
+  justify-content: center;
 }
 
 p {
@@ -23,4 +24,28 @@ p {
 
 .main-div {
   display: flex;
+}
+
+.counter {
+  margin-top: 25px;
+}
+
+.input {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  color: white !important;
+}
+
+.MuiInputBase-input {
+  color: white !important;
+}
+
+.MuiFormControl-root {
+  color: white !important;
+}
+
+.MuiTextField-root {
+  color: white !important;
 }
